--- a/assets/css/clients.sass
+++ b/assets/css/clients.sass
@@ -4,19 +4,22 @@
   text-align: center
   margin-top: 3em
   img
-    max-width: 12em
+    max-width: 15em
     width: 80%
+    margin-top: 4em
 
 
 @media (max-width: 1500px)
   .brand
-    margin-top: 2em
+    img
+      max-width: 12em
+      margin-top: 2em
 
 
 @media (max-width: 1200px)
-.brand
-  img
-    max-width: 10em
+  .brand
+    img
+      max-width: 10em
 
 
 @media (max-width: 700px)
@@ -24,3 +27,4 @@
     width: 49%
     img
       max-width: 6em
+      margin-top: 0
