--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -42,14 +42,16 @@ html, body
   text-align: center
 
   img
-    width: 24em
+    width: 30em
     margin-top: -5.5em
 
+@media (max-width: 2000px)
+  .logo
+    img
+      width: 24em
 
 @media (max-width: 1500px)
-
   .logo
-
     img
       width: 18em
 
