--- a/views/clients.haml
+++ b/views/clients.haml
@@ -17,16 +17,15 @@
               .brand
                 %img{:src => "assets/img/brands/tri.png"}
               .brand
-                %img{:src => "assets/img/brands/lottery.png"}
+                %img{:src => "assets/img/brands/teamgb.png"}
               .brand
-                %img{:src => "assets/img/brands/tri.png"}
+                %img{:src => "assets/img/brands/itu.png"}
           .row
             .twelve.columns
               .brand
-                %img{:src => "assets/img/brands/tri.png"}
+                %img{:src => "assets/img/brands/panasonic.png"}
               .brand
-                %img{:src => "assets/img/brands/lottery.png"}
+                %img{:src => "assets/img/brands/nectar.png"}
               .brand
-                %img{:src => "assets/img/brands/tri.png"}
+                %img{:src => "assets/img/brands/camelot.png"}
               .brand
-                %img{:src => "assets/img/brands/lottery.png"}
