--- a/views/work-sections/work_block.haml
+++ b/views/work-sections/work_block.haml
@@ -6,7 +6,7 @@
           %a{:href => "work/test1"}
             .section-description
               .section-icon
-                %img(src='/assets/img/small&nimble-grey.png')
+                %img(src='/assets/img/services/small-and-nimble.png')
               .section-text
                 %h2 Small and Nimble
                 %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
@@ -17,7 +17,7 @@
           %a{:href => "#"}
             .section-description
               .section-icon
-                %img(src='/assets/img/small&nimble-grey.png')
+                %img(src='/assets/img/services/big-and-bold.png')
               .section-text
                 %h2 Small and Nimble
                 %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
@@ -28,7 +28,7 @@
           %a{:href => "#"}
             .section-description
               .section-icon
-                %img(src='/assets/img/small&nimble-grey.png')
+                %img(src='/assets/img/services/campaigns.png')
               .section-text
                 %h2 Small and Nimble
                 %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
