--- a/assets/css/sections.sass
+++ b/assets/css/sections.sass
@@ -22,9 +22,9 @@
 
 .bolt-one-divider
   background: url("img/bolt1.png") no-repeat center
-  background-size: 100% 10em
+  background-size: 100% 15em
   width: 100%
-  height: 10em
+  height: 15em
 
   h1
     color: $blue
@@ -33,13 +33,19 @@
 
 .divider-pink
   background: url("img/bolt2.png") no-repeat center
-  background-size: 100% 10em
+  background-size: 100% 15em
 
   h1
     color: $pink
 
+@media (max-width: 1800px)
+  .bolt-one-divider
+    background-size: 100% 10em
+    width: 100%
+    height: 10em
 
-
+  .divider-pink
+    background-size: 100% 10em
 
 // COLOUR BLOCKS //
 
@@ -89,7 +95,27 @@
   width: 100%
   text-align: center
   img
-    width: 7em
+    width: 45%
+    margin-bottom: 2em
+
+@media (max-width: 2200px)
+  .section-icon
+    img
+      max-width: 11em
+      margin-bottom: 1em
+
+@media (max-width: 1800px)
+  .section-icon
+    img
+      max-width: 9em
+      margin-bottom: 0
+
+@media (max-width: 1400px)
+  .section-icon
+    img
+      max-width: 7em
+      margin-bottom: 0
+
 
 .section-text
   display: block
