--- a/views/work-sections/work_block.haml
+++ b/views/work-sections/work_block.haml
@@ -1,36 +1,42 @@
-.outer
-  .middle
-    .inner
-      .row
-        .four.columns.section-feature-image
-          %a{:href => "work/test1"}
-            .section-description
-              .section-icon
-                %img(src='/assets/img/services/small-and-nimble.png')
-              .section-text
-                %h2 Small and Nimble
-                %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
-                %a.button
-                  View case study
+.four.columns.section-feature-image
+  %a{:href => "work/test1"}
+    .section-description
+      .section-icon
+        %img{:src => "/assets/img/services/#{type}.png"}
+      .section-text
 
-        .four.columns.section-feature-image
-          %a{:href => "#"}
-            .section-description
-              .section-icon
-                %img(src='/assets/img/services/big-and-bold.png')
-              .section-text
-                %h2 Small and Nimble
-                %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
-                %a.button
-                  View case study
+        -if type == "big-and-bold"
+          %h2 Big & Bold
+          %p A one off disruptive piece might be all you need. We can offer the creative edge needed along side some tiptop execution skills.
+          %a.button
+            View case study
 
-        .four.columns.section-feature-image
-          %a{:href => "#"}
-            .section-description
-              .section-icon
-                %img(src='/assets/img/services/campaigns.png')
-              .section-text
-                %h2 Small and Nimble
-                %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
-                %a.button
-                  View case study
+        -if type == "campaigns"
+          %h2 Digital Campaigns
+          %p Delivering a campaign that consists of multiple pieces of content. We can build a creative for your campaign and content executions.
+          %a.button
+            View case study
+
+        -if type == "digital-influencer"
+          %h2 Digital Influencers
+          %p We can help you work with digital influencers that can turbo charge engagement and help reach new audiences.
+          %a.button
+            View case study
+
+        -if type == "digital-strategy"
+          %h2 Digital Content Strategy
+          %p Don’t just dive straight in, get your strategy in shape first and we can help you do just that.
+          %a.button
+            View case study
+
+        -if type == "short-form"
+          %h2 Short Form Content
+          %p Build new audiences on new platforms whilst energizing your current channels. What is there not to like?
+          %a.button
+            View case study
+
+        -if type == "small-and-nimble"
+          %h2 Small & Nimble
+          %p Great content can be reactive and timely. We can create and execute content solutions that allow you to join the conversation.
+          %a.button
+            View case study
