--- a/views/work-sections/work_section.haml
+++ b/views/work-sections/work_section.haml
@@ -1,25 +1,25 @@
 .section#fourthPage
   .sub-section
     - if header == true
-      .row.wide-row
-        .twelve.columns.section-colums
-          .bolt-one-divider.divider-top
-            .row
-              .ten.columns
-                %h1.header
-                  What we create
-          .mobile-header.blue-bg
-            %h1
-              What we create
-    - if header == true
-      .blue-block.blue-block-small
-        = haml :'work-sections/work_block'
-    - else
-      .blue-block.blue-block-long
-        = haml :'work-sections/work_block'
+      = haml :'work-sections/bolt', :locals => { :header => true }
 
-    - if header == false
-      .row.wide-row
-        .twelve.columns.section-colums
-          .bolt-one-divider.divider-flip
-            .ten.offset-by-one.columns
+      .blue-block.blue-block-head
+        .outer
+          .middle
+            .inner
+              .row
+                = haml :'work-sections/work_block', :locals => { :type => "big-and-bold" }
+                = haml :'work-sections/work_block', :locals => { :type => "campaigns" }
+                = haml :'work-sections/work_block', :locals => { :type => "digital-influencer" }
+
+    - else
+      .blue-block.blue-block-foot
+        .outer
+          .middle
+            .inner
+              .row
+                = haml :'work-sections/work_block', :locals => { :type => "digital-strategy" }
+                = haml :'work-sections/work_block', :locals => { :type => "short-form" }
+                = haml :'work-sections/work_block', :locals => { :type => "small-and-nimble" }
+
+      = haml :'work-sections/bolt', :locals => { :header => false }
