desktop case studies

--- a/assets/application.scss
+++ b/assets/application.scss
@@ -7,9 +7,12 @@
 @import "css/global";
 @import "css/font";
 @import "css/nav";
+@import "css/media";
 @import "css/buttons";
 @import "css/header";
 @import "css/sections";
 @import "css/clients";
 @import "css/footer";
+@import "css/case-studies";
 @import "css/fullpage-false";
+@import "css/typer.css";
