--- a/assets/css/nav.sass
+++ b/assets/css/nav.sass
@@ -52,6 +52,17 @@ label
     a
       color: $pink
 
+.secondary-navigation
+  .desktop-nav
+    text-align: left
+
+  .nav
+    margin-top: 1em
+    cursor: pointer
+
+.nav-back
+  width: 3em
+  cursor: pointer
 
 @media screen and (max-width: 700px)
 
