--- a/views/clients.haml
+++ b/views/clients.haml
@@ -29,3 +29,4 @@
               .brand
                 %img{:src => "assets/img/brands/camelot.png"}
               .brand
+                %img{:src => "assets/img/brands/uksport.png"}
