--- a/views/navigation.haml
+++ b/views/navigation.haml
@@ -2,6 +2,9 @@
   %input#button{:type => "checkbox"}/
   %label{:for => "button", :onclick => ""}
 
+
+  / TODO create a nav for no JS to remove errors
+
   .mobile-nav
     %ul.nav
       %a.mobile-nav-link{:href => "#secondPage"}
@@ -26,7 +29,7 @@
     %ul.nav.navlogo
       %li
         %a{:href => "#secondPage"}
-          %img{:src => "assets/img/CombinationMarkV1Pink.png"}
+          %img{:src => "/assets/img/CombinationMarkV1Pink.png"}
 
     %ul.nav#nav2
       %li
