--- a/views/work-sections/work_block.haml
+++ b/views/work-sections/work_block.haml
@@ -1,5 +1,5 @@
 .four.columns.section-feature-image
-  %a{:href => "work/test1"}
+  %a{:href => "work/#{type}"}
     .section-description
       .section-icon
         %img{:src => "/assets/img/services/#{type}.png"}
