--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -79,6 +79,12 @@ html, body
   height: auto
   overflow: hidden
 
+.header-image
+  background-size: cover
+  background-position: right center
+  width: 100%
+  height: 100%
+
 
 .play-btn
   position: absolute
@@ -89,3 +95,18 @@ html, body
   text-decoration: none
   p
     color: white
+
+.hero-header
+  position: absolute
+  width: 100%
+  top: 35vh
+  z-index: 10
+  text-align: center
+  text-decoration: none
+  p
+    color: $pink
+  .sub
+    color: white
+    float: right
+    padding: 0 10%
+    text-align: right
