mobile case study

--- a/views/case-studies/result.haml
+++ b/views/case-studies/result.haml
@@ -5,19 +5,19 @@
         .inner
           .row
             .twelve.columns
-              %h1
+              %h1.blue
                 The Results
-          .row
-            .three.columns
-              .result-block
-                %p Views: 2.4m
-            .three.columns
-              .result-block
-                %p Comments: 4k
-            .three.columns
-              .result-block
-                %p Likes: 146k
-            .three.columns
-              .result-block
-                %p Behind the scenes views: 10k
+          .row.wide-row
+            .result-block.pink
+              %h5 Views:
+              %p 2.4m
+            .result-block.blue
+              %h5 Comments:
+              %p 4k
+            .result-block.white
+              %h5 Likes:
+              %p 146k
+            .result-block.pink
+              %h5 Behind the scenes views:
+              %p 10k
 
