--- a/views/case-studies/solution_section.haml
+++ b/views/case-studies/solution_section.haml
@@ -1,5 +1,31 @@
 .section#fourthPage
-  .sub-section
+  .sub-section.sub-section-mobile
+    .blue-block.blue-block-head
+      .outer
+        .middle
+          .inner
+            .row
+              .seven.columns
+                %h2
+                  Think big!
+                %p
+                  The National Lottery Good Cause social channels are not of a size or reach to pull-off what was needed. This required the leverage of a digital influencer…a big influencer! That person was the UK’s biggest youtuber, KSI.
+
+                %h2
+                  Authentic Message
+                %p
+                  To help deliver the messaging needed, we needed a funded British athlete to feature and that person was Team GB athletics captain and 100m sprinter, Adam Gemili.
+
+                %h2
+                  Confident Execution
+                %p
+                  Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
+
+      .four.offset-by-seven.columns.ksi.media-mobile
+        .ksi-img
+          %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
+
+  .sub-section.sub-section-desktop
     = haml :'work-sections/bolt', :locals => { :header => true }
 
     .blue-block.blue-block-head
@@ -23,7 +49,30 @@
           %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
 
 .section#fourthPage
-  .sub-section
+  .sub-section.sub-section-mobile
+    .blue-block.blue-block-head
+      .outer
+        .middle
+          .inner
+            .row
+              .five.columns
+
+                .embed-container.long.media-mobile
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195614777?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+                .sub.media-mobile
+                  Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
+
+              .seven.columns
+                %p
+                  Youtube is saturated with generic challenge videos, in response we decided to satirise this popular trend by creating the ‘ultimate’ challenge ‘challenge’ video. Poking fun at some of the most tired and popular trends!
+                %p
+                  Our bottle flip challenge really got people talking! Was it real or not! A huge debate which drove engagment.
+                  The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
+                %p
+                  Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
+
+
+  .sub-section.sub-section-desktop
     .blue-block.blue-block-long
       .outer
         .middle
@@ -46,12 +95,35 @@
                   The concept was for Adam and KSI to complete 19 challenges, which marked 19 years that British athletes have been funded by The National Lottery.
                 %p
                   Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
-                %p
-                  Additionally, each challenge was re-edited to form individual short form pieces, which would help create additional relevant content for The National Lottery’s own social channels. This was also supported by a Behind the Scenes video that sat on The National Lottery’s youtube channel. Awesome!!!
 
 
 .section#fourthPage
-  .sub-section
+  .sub-section.sub-section-mobile
+    .blue-block.blue-block-long
+      .outer
+        .middle
+          .inner
+            .row
+              .seven.columns
+                %p
+                  Additionally, each challenge was re-edited to form individual short form pieces, which would help create additional relevant content for The National Lottery’s own social channels. This was also supported by a Behind the Scenes video that sat on The National Lottery’s youtube channel. Awesome!!!
+
+              .five.columns.media-mobile
+                .embed-container.short
+                  %iframe{:allowfullscreen => "", :frameborder => "0", :mozallowfullscreen => "", :src => "http://player.vimeo.com/video/195639791?autoplay=1&loop=1&title=0&byline=0&portrait=0", :webkitallowfullscreen => ""}
+
+            .row
+              .seven.columns
+                .quote
+                  “  Tanjun managed to produce a film which worked for both us and KSI. It was pitched perfectly – funny, tongue-in-cheek, well messaged – and has had great audience engagement. "
+                .auth
+                  — Jackie O Sullivan, Director,
+                  %br National Lottery Promotions Unit
+
+
+
+
+  .sub-section.sub-section-desktop
     .blue-block.blue-block-long
       .outer
         .middle
