--- a/assets/css/case-studies.sass
+++ b/assets/css/case-studies.sass
@@ -1,11 +1,50 @@
 .result-block
-  background: $pink
-  padding-bottom: 100%
+  padding-bottom: 25%
   position: relative
+  margin-left: 0
+  width: 25%
+  display: inline-table
+  float: left
   p
     position: absolute
-    top: 38%
-    font-size: 1.5em
+    top: 25%
     width: 100%
-    text-align: center
-    font-family: 'Feature'
+
+  h5
+    position: absolute
+    top: 1em
+    width: 100%
+
+h1.blue
+  color: $blue
+
+.result-block.pink
+  background: $pink
+  h5
+    color: $blue
+  p
+    color: white
+
+.result-block.blue
+  background: $lightblue
+  h5
+    color: $blue
+  p
+    color: white
+
+.result-block.white
+  h5
+    color: $blue
+  p
+    color: $pink
+
+@media (max-width: 1000px)
+  .result-block
+    p
+      top: 25%
+
+@media (max-width: 800px)
+  .result-block
+    width: 50%
+    height: 30vh
+
