--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -57,6 +57,17 @@ h2
   font-family: 'Header'
   font-size: 2em
 
+.result-block
+  p
+    text-align: center
+    font-family: 'Feature'
+    font-size: 4em
+
+  h5
+    font-size: 1.3em
+    font-family: 'Header'
+    text-align: center
+
 .highligh-blue
   margin: 0.8em 0
   padding: 0
@@ -163,6 +174,23 @@ h2
   .hero-header
     p
       font-size: 3.3em
+
+@media (max-width: 1000px)
+  .result-block
+    p
+      font-size: 3em
+
+    h5
+      font-size: 1em
+
+@media (max-width: 900px)
+
+  .quote
+    font-size: 1.4em
+
+  .auth
+    font-size: 1em
+
 @media (max-width: 700px)
 
   h1
@@ -187,6 +215,11 @@ h2
     margin: 0.6em 0
     b
       padding-left: 0
+
+@media (max-width: 650px)
+  .result-block
+    p
+      font-size: 2em
 
 @media (max-width: 550px)
 
