--- a/assets/css/media.sass
+++ b/assets/css/media.sass
@@ -19,10 +19,39 @@
   width: 100%
   height: 100%
 
-
 .ksi-img
   position: relative
   height: 70vh
   img
     position: absolute
     bottom: 0
+
+  .quick-stretch
+    width: initial
+
+.sub-section-desktop
+  display: block
+
+.sub-section-mobile
+  display: none
+
+@media (max-width: 900px)
+  .sub-section-desktop
+    display: none
+
+  .sub-section-mobile
+    display: block
+
+  .ksi
+    height: 100%
+    .ksi-img
+      height: 100%
+
+@media (max-width: 700px)
+  .media-mobile
+    display: none
+
+  .sub-section-mobile
+    .section
+      .columns
+        width: 100%
