--- a/assets/css/sections.sass
+++ b/assets/css/sections.sass
@@ -75,6 +75,14 @@
     .middle
       padding-top: 3em
 
+@media (max-width: 900px)
+  .sub-section.sub-section-mobile
+    .blue-block-head,
+    .blue-block-foot
+      height: 100%
+      .outer
+        height: 100%
+
 @media (max-width: 700px)
 
   .blue-block
