--- a/assets/css/font.sass
+++ b/assets/css/font.sass
@@ -61,11 +61,11 @@ h2
   p
     text-align: center
     font-family: 'Feature'
-    font-size: 4em
+    font-size: 1em
 
   h5
-    font-size: 1.3em
-    font-family: 'Header'
+    font-size: 3em
+    font-family: 'Feature'
     text-align: center
 
 .highligh-blue
@@ -110,7 +110,7 @@ h2
   font-size: 0.8em
   margin: 0
   padding: 0.4em 0 0 0
-  font-family: 'BodyBold'
+  font-family: 'Feature'
   color: white
 
 @media (max-width: 1800px)
@@ -178,10 +178,10 @@ h2
 @media (max-width: 1000px)
   .result-block
     p
-      font-size: 3em
+      font-size: 0.8em
 
     h5
-      font-size: 1em
+      font-size: 2em
 
 @media (max-width: 900px)
 
@@ -219,7 +219,7 @@ h2
 @media (max-width: 650px)
   .result-block
     p
-      font-size: 2em
+      font-size: 0.8em
 
 @media (max-width: 550px)
 
@@ -236,5 +236,11 @@ h2
     p
       font-size: 2em
 
+  .result-block
+    p
+      font-size: 0.6em
+
+    h5
+      font-size: 1.6em
 
 
