--- a/views/case-studies/problem.haml
+++ b/views/case-studies/problem.haml
@@ -1,51 +1,59 @@
-.section.section-large#thirdPage
+.section.section-large
   .sub-section
     .outer
       .middle
         .inner
 
           .row
-            .eleven.columns.typer-box
+            .six.columns
+              %p.highligh-blue
+                %b The National Lottery:
+                Hey Tanjun
+              %p.highligh-pink
+                %b Tanjun:
+                Hey guys
+              %p.highligh-blue
+                %b The National Lottery:
+                Can you communicate the message that over 1,300 British athletes are funded by The National Lottery, making them some of the best athletes in the world?
+              %p.highligh-pink
+                %b Tanjun:
+                Yeah, no worries!
+              %p.highligh-blue
+                %b The National Lottery:
+                Yeah, BTW, can you communicate it to a completely new young audience that thinks The National Lottery was created in the early 18th centenary by some ‘old dudes’.
+              %p.highligh-pink
+                %b Tanjun:
+                Ha! Young people hey, lol. Yep, no worries.
+              %p.highligh-blue
+                %b The National Lottery:
+                Also, can you raise awareness that as well as athletes, The National Lottery pretty much funds every cool thing ever, across the UK. In fact, can you also communicate the fact we have funded over 500k projects.
+              %p.highligh-pink
+                %b Tanjun:
+                Right! Yeah, we’ll add that to the list.
+              %p.highligh-blue
+                %b The National Lottery:
+                Great, thank you!
+              %p.highligh-pink
+                %b Tanjun:
+                You’re welcome
 
-              / %p.highligh-blue
-              /   %b The National Lottery:
-              /   Hey Tanjun
-              / %p.highligh-pink
-              /   %b Tanjun:
-              /   Hey guys
-              / %p.highligh-blue
-              /   %b The National Lottery:
-              /   Can you communicate the message that over 1,300 British athletes are funded by The National Lottery, making them some of the best athletes in the world?
-              / %p.highligh-pink
-              /   %b Tanjun:
-              /   Yeah, no worries!
-              / %p.highligh-blue
-              /   %b The National Lottery:
-              /   Yeah, BTW, can you communicate it to a completely new young audience that thinks The National Lottery was created in the early 18th centenary by some ‘old dudes’.
-              / %p.highligh-pink
-              /   %b Tanjun:
-              /   Ha! Young people hey, lol. Yep, no worries.
-              / %p.highligh-blue
-              /   %b The National Lottery:
-              /   Also, can you raise awareness that as well as athletes, The National Lottery pretty much funds every cool thing ever, across the UK. In fact, can you also communicate the fact we have funded over 500k projects.
-              / %p.highligh-pink
-              /   %b Tanjun:
-              /   Right! Yeah, we’ll add that to the list.
-              / %p.highligh-blue
-              /   %b The National Lottery:
-              /   Great, thank you!
-              / %p.highligh-pink
-              /   %b Tanjun:
-              /   You’re welcome
-              / %p.highligh-blue
-              /   %b The National Lottery:
-              /   Oh, one other thing…
-              / %p.highligh-pink
-              /   %b Tanjun:
-              /   Yeah, sure, go for it!
-              / %p.highligh-blue
-              /   %b The National Lottery:
-              /   You’ll need to also generate over 2 million views and help shift the perception of the National Lottery to a more playful, confident and self-aware brand as well as driving significant engagement across our new social channels.
-              / %p.highligh-pink
-              /   %b Tanjun:
-              /   Errr, yep, we can do that!!!!! Nooooo problem!!!
+.section.section-large
+  .sub-section
+    .outer
+      .middle
+        .inner
+
+          .row
+            .six.offset-by-six.columns
+              %p.highligh-blue
+                %b The National Lottery:
+                Oh, one other thing…
+              %p.highligh-pink
+                %b Tanjun:
+                Yeah, sure, go for it!
+              %p.highligh-blue
+                %b The National Lottery:
+                You’ll need to also generate over 2 million views and help shift the perception of the National Lottery to a more playful, confident and self-aware brand as well as driving significant engagement across our new social channels.
+              %p.highligh-pink
+                %b Tanjun:
+                Errr, yep, we can do that!!!!! Nooooo problem!!!
