--- a/views/case-studies/result.haml
+++ b/views/case-studies/result.haml
@@ -7,17 +7,23 @@
             .twelve.columns
               %h1.blue
                 The Results
-          .row.wide-row
-            .result-block.pink
-              %h5 Views:
-              %p 2.4m
+          .row
             .result-block.blue
-              %h5 Comments:
-              %p 4k
+              .result
+                %h5 2m
+                %p Views
             .result-block.white
-              %h5 Likes:
-              %p 146k
-            .result-block.pink
-              %h5 Behind the scenes views:
-              %p 10k
+              .result
+                %h5 4k
+                %p Comments
+            .result-block.blue
+              .result
+                %h5 146k
+                %p Likes
+            .result-block.white
+              .result
+                %h5 10k
+                %p
+                  Behind the
+                  %br scenes
 
