--- a/assets/css/media.sass
+++ b/assets/css/media.sass
@@ -35,6 +35,25 @@
 .sub-section-mobile
   display: none
 
+.typer-box
+  width: 100%
+
+.typer-wrap
+  width: 50%
+  display: inline-block
+  float: left
+
+.typer-text
+  height: 30vh
+  background: $pink
+
+.typer-image
+  margin-top: 10vh
+  height: 60vh
+  img
+    max-height: 100%
+    width: initial
+
 @media (max-width: 900px)
   .sub-section-desktop
     display: none
