--- a/views/case-studies/problem.haml
+++ b/views/case-studies/problem.haml
@@ -1,4 +1,4 @@
-.section.section-large
+.section
   .sub-section
     .outer
       .middle
@@ -37,7 +37,7 @@
                 %b Tanjun:
                 You’re welcome
 
-.section.section-large
+.section
   .sub-section
     .outer
       .middle
