--- a/views/case-studies/solution_section.haml
+++ b/views/case-studies/solution_section.haml
@@ -44,7 +44,7 @@
                 %p
                   To help deliver the messaging needed, we needed a funded British athlete to feature and that person was Team GB athletics captain and 100m sprinter, Adam Gemili.
 
-      .four.offset-by-seven.columns
+      .four.offset-by-seven.columns.ksi
         .ksi-img
           %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
 
