--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -83,7 +83,7 @@ html, body
   background-size: cover
   background-position: right center
   width: 100%
-  height: 100%
+  height: 100vh
 
 
 .play-btn
