nav and asset tidy

--- a/assets/css/media.sass
+++ b/assets/css/media.sass
@@ -24,7 +24,7 @@
   height: 70vh
   img
     position: absolute
-    bottom: 0
+    top: 0
 
   .quick-stretch
     width: initial
@@ -65,6 +65,9 @@
     height: 100%
     .ksi-img
       height: 100%
+      img
+        bottom: 15%
+        top: inherit
 
 @media (max-width: 700px)
   .media-mobile
