--- a/views/case-studies/big-and-bold.haml
+++ b/views/case-studies/big-and-bold.haml
@@ -13,7 +13,7 @@
 
     #fullpage2
 
-      = haml :back
+      = haml :"sub-navigation"
       = haml :"case-studies/header"
       = haml :"case-studies/problem"
       = haml :"case-studies/solution"
