--- a/views/case-studies/problem.haml
+++ b/views/case-studies/problem.haml
@@ -1,8 +1,15 @@
 .section
   .sub-section
+    .mobile-header.white-bg
+      %h1
+        The Challenge
     .outer
       .middle
         .inner
+          .row
+            .ten.columns
+              %h1.header
+                The Challenge
 
           .row
             .six.columns
