--- a/views/case-studies/result.haml
+++ b/views/case-studies/result.haml
@@ -1,11 +1,14 @@
-.section#seventh
+.section
   .sub-section
+    .mobile-header.white-bg
+      %h1
+        The Results
     .outer
       .middle
         .inner
           .row
             .twelve.columns
-              %h1.blue
+              %h1.header.blue
                 The Results
           .row
             .result-block.blue
