--- a/views/case-studies/solution_section.haml
+++ b/views/case-studies/solution_section.haml
@@ -1,9 +1,16 @@
-.section#fourthPage
+.section
   .sub-section.sub-section-mobile
     .blue-block.blue-block-head
+      .mobile-header.blue-bg
+        %h1
+          The Solution
       .outer
         .middle
           .inner
+            .row
+              .tablet-header.blue-bg
+                %h1
+                  The Solution
             .row
               .seven.columns
                 %h2
@@ -26,7 +33,7 @@
           %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
 
   .sub-section.sub-section-desktop
-    = haml :'work-sections/bolt', :locals => { :header => true }
+    = haml :'work-sections/bolt', :locals => { :header => true, :text => "The Solution" }
 
     .blue-block.blue-block-head
       .outer
@@ -48,9 +55,9 @@
         .ksi-img
           %img.image{:src => "/assets/img/case-studies/big-and-bold/solution-1.jpeg"}
 
-.section#fourthPage
+.section
   .sub-section.sub-section-mobile
-    .blue-block.blue-block-head
+    .blue-block.blue-block-long
       .outer
         .middle
           .inner
@@ -97,7 +104,7 @@
                   Each challenge was designed to create a talking point, therefore driving engagement and views. Conversation was also driven by the voice over we created with up and coming social star Schieffer Bates, as he introduces each challenge with a different impression. We deliberately didn’t name the people he was impersonating, but instead gave visual clues through typography and design.
 
 
-.section#fourthPage
+.section
   .sub-section.sub-section-mobile
     .blue-block.blue-block-long
       .outer
