--- a/views/case-studies/video.haml
+++ b/views/case-studies/video.haml
@@ -1,4 +1,4 @@
-.section.section-large#secondPage
+.section.section-large
 
   .lity-iframe-container.lity-hide
     %iframe{:allowfullscreen => "", :webkitallowfullscreen => "", :mozallowfullscreen => "", :frameborder => "0", :src => "https://player.vimeo.com/video/203277091"}
