--- a/views/work-sections/bolt.haml
+++ b/views/work-sections/bolt.haml
@@ -5,10 +5,10 @@
         .row
           .ten.columns
             %h1.header
-              What we create
+              = text
       .mobile-header.blue-bg
         %h1
-          What we create
+          = text
 
 - if header == false
   .row.wide-row
