--- a/views/work-sections/work_section.haml
+++ b/views/work-sections/work_section.haml
@@ -1,7 +1,7 @@
-.section#fourthPage
+.section#whatWeCreate
   .sub-section
     - if header == true
-      = haml :'work-sections/bolt', :locals => { :header => true }
+      = haml :'work-sections/bolt', :locals => { :header => true, :text => "What we create" }
 
       .blue-block.blue-block-head
         .outer
