--- a/assets/css/global.sass
+++ b/assets/css/global.sass
@@ -95,14 +95,24 @@ a
   display: block
 
 .mobile-header
+  text-align: center
   display: none
   color: $pink
   height: 9vh
   h1
     padding: 0.45em 4%
 
+.tablet-header
+  display: none
+
+@media (max-width: 900px)
+  .tablet-header
+    display: block
+    color: $pink
 
 @media (max-width: 700px)
+  .tablet-header
+    display: none
 
   .header
     display: none
