--- a/views/case-studies/header.haml
+++ b/views/case-studies/header.haml
@@ -8,4 +8,4 @@
         Nattional lottery good causes
 
   .overlay
-  .header-image{ :style => "background-image: url('/assets/img/case-studies/big-and-bold/header-img.png')"}
+  .header-image{ :style => "background-image: url('/assets/img/case-studies/big-and-bold/header-img.jpg')"}
