Fix desktop headers

--- a/views/about.haml
+++ b/views/about.haml
@@ -3,14 +3,13 @@
     .mobile-header.white-bg
       %h1
         Who we are
+    .row.desktop-header
+      .ten.columns
+        %h1.header
+          Who we are
     .outer
       .middle
         .inner
-          .row
-            .ten.columns
-              %h1.header
-                Who we are
-
           .row
             .ten.columns
               %p
