--- a/views/case-studies/result.haml
+++ b/views/case-studies/result.haml
@@ -3,13 +3,13 @@
     .mobile-header.white-bg
       %h1
         The Results
+    .row.desktop-header
+      .twelve.columns
+        %h1.header.blue
+          The Results
     .outer
       .middle
         .inner
-          .row
-            .twelve.columns
-              %h1.header.blue
-                The Results
           .row
             .result-block.blue
               .result
