--- a/views/clients.haml
+++ b/views/clients.haml
@@ -3,13 +3,13 @@
     .mobile-header.white-bg
       %h1
         Who we work with
+    .row.desktop-header
+      .ten.columns
+        %h1.header
+          Who we work with
     .outer
       .middle
         .inner
-          .row
-            .ten.columns
-              %h1.header
-                Who we work with
           .row
             .twelve.columns
               .brand
