--- a/assets/css/header.sass
+++ b/assets/css/header.sass
@@ -85,6 +85,17 @@ html, body
   width: 100%
   height: 100vh
 
+.desktop-header
+  padding-top: 6em
+  height: 17vh
+  .header
+    padding: 0
+    margin: 0
+
+
+@media (max-width: 700px)
+  .desktop-header
+    display: none
 
 .play-btn
   position: absolute
