--- a/views/case-studies/problem.haml
+++ b/views/case-studies/problem.haml
@@ -3,16 +3,15 @@
     .mobile-header.white-bg
       %h1
         The Challenge
+    .row.desktop-header
+      .ten.columns
+        %h1.header
+          The Challenge
     .outer
       .middle
         .inner
           .row
-            .ten.columns
-              %h1.header
-                The Challenge
-
-          .row
-            .six.columns
+            .eight.columns
               %p.highligh-blue
                 %b The National Lottery:
                 Hey Tanjun
