--- a/assets/css/sections.sass
+++ b/assets/css/sections.sass
@@ -21,7 +21,7 @@
   transform: rotate(180deg)
 
 .bolt-one-divider
-  background: url("img/bolt1.png") no-repeat center
+  background: url("img/bolt1.1.png") no-repeat center
   background-size: 100% 15em
   width: 100%
   height: 15em
@@ -32,7 +32,7 @@
     padding-top: 1em
 
 .divider-pink
-  background: url("img/bolt2.png") no-repeat center
+  background: url("img/bolt2.1.png") no-repeat center
   background-size: 100% 15em
 
   h1
@@ -50,13 +50,13 @@
 // COLOUR BLOCKS //
 
 .blue-block
-  background: $lightblue
+  background: $lightblue url("img/bg/clear-blue.png")
   height: 77%
   width: 100%
 
 
 .pink-block
-  background: $pink
+  background: $pink url("img/bg/clear-pink.png")
   height: 100%
   width: 100%
 
@@ -90,12 +90,12 @@
   color: $pink
 
 .pink-bg
-  background: $pink
+  background: $pink url("img/bg/clear-pink.png")
   h1
     color: $blue
 
 .blue-bg
-  background: $lightblue
+  background: $lightblue url("img/bg/clear-blue.png")
 
 .white-bg
   background: white
